--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "plugins": ["prettier"],
   "extends": ["react-app", "prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    // "prettier/prettier": "error",
     "no-console": "warn"
   }
 }
